--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.4",
+    "@types/expect": "^1.20.3",
     "@types/moment": "^2.13.0",
     "@types/mysql": "^2.15.5",
     "@types/nodegit": "^0.22.3",
@@ -19,6 +20,7 @@
     "cors": "^2.8.4",
     "echarts": "^3.3.2",
     "element-ui": "^1.2.8",
+    "expect": "^23.6.0",
     "font-awesome": "^4.7.0",
     "moment": "^2.22.2",
     "mysql": "^2.16.0",
@@ -28,6 +30,7 @@
     "query": "^0.2.0",
     "request-promise": "^4.2.2",
     "supervisor": "^0.12.0",
+    "unbuffer": "0.0.1",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0",
     "vuex": "^2.0.0-rc.6"
